# cmocka

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CompilerChecks.cmake  meson.build
doc/: mainpage.dox
example/: CMakeLists.txt  allocate_module.c  allocate_module_test.c  assert_macro_test.c  assert_module_test.c  calculator_test.c  simple_test.c
example/mock/: CMakeLists.txt
example/mock/chef_wrap/: CMakeLists.txt  chef.c  waiter_test_wrap.c
example/mock/uptime/: CMakeLists.txt  proc_uptime.h  test_uptime.c  uptime.c
include/: CMakeLists.txt  cmocka.h  cmocka_private.h  cmocka_stdint.h  meson.build
pregen/: cmocka_export.h
src/: CMakeLists.txt  cmocka.c
tests/: CMakeLists.txt  meson.build  test_alloc.c  test_assert_macros.c  test_assert_macros_fail.c  test_assert_ptr.c  test_assert_ptr_fail.c  test_assert_range.c  test_assert_range_fail.c  test_assert_set.c  test_assert_set_fail.c  test_assert_u_int.c  test_assert_u_int_fail.c  test_basics.c  test_double_macros.c  test_exception_handler.c  test_expect_check.c  test_expect_check_fail.c  test_fixtures.c  test_float_macros.c  test_group_fixtures.c  test_group_setup_assert.c  test_group_setup_fail.c  test_groups.c  test_ordering.c  test_ordering_fail.c  test_returns.c  test_returns_fail.c  test_setup_fail.c  test_skip.c  test_skip_filter.c  test_stop.c  test_stop_fail.c  test_string.c  test_strmatch.c  test_wildcard.c
